# OpenGarage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TOOL_IDEAS.md  pyproject.toml
tools/downloaders/: yt_convertor.py
tools/downloaders/youtube_to_mp3/: youtube_to_mp3.py
tools/encoders/rle_encoder/on_image/binary_image/: binarize.py  rle_encoder_image.py
tools/encoders/rle_encoder/on_image/binary_image/output/: rle.txt
tools/encoders/rle_encoder/on_text/: rleEncoder.cpp  rle_encoder.py
tools/encoders/rle_encoder/on_text/input/: test.txt
tools/video_convertors/: ffm_convertor.py
tools/video_convertors/mp4_to_gif/: mp4_to_gif.py
tools/video_convertors/webm_to_mp4/: webm_to_mp4.py
